--- a/src/App.css
+++ b/src/App.css
@@ -1,148 +1,132 @@
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
 .BreadBottom {
-  height: 13%;
-  width: 80%;
-  background: linear-gradient(#F08E4A, #e27b36);
-  border-radius: 0 0 30px 30px;
-  box-shadow: inset -15px 0 #c15711;
-  margin: 2% auto;
+  width: 100%;
+  height: 50px;
+  top: 140px;
+  background-color: #DF7B30;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
 }
 
 .BreadTop {
-  height: 20%;
-  width: 80%;
-  background: linear-gradient(#bc581e, #e27b36);
-  border-radius: 50% 50% 0 0;
-  box-shadow: inset -15px 0 #c15711;
-  margin: 2% auto;
-  position: relative;
+  width: 100%;
+  height: 70px;
+  top: 88px;
+  left: 150px;
+  background-color: #DF7B30;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
 }
 
-.Seeds1 {
-  width: 10%;
-  height: 15%;
-  position: absolute;
-  background-color: white;
-  left: 30%;
-  top: 50%;
-  border-radius: 40%;
-  transform: rotate(-20deg);
-  box-shadow: inset -2px -3px #c9c9c9;
-}
-
-.Seeds1:after {
-  content: "";
+.sesame {
   width: 100%;
   height: 100%;
-  position: absolute;
-  background-color: white;
-  left: -170%;
-  top: -260%;
-  border-radius: 40%;
-  transform: rotate(60deg);
-  box-shadow: inset -1px 2px #c9c9c9;
-}
-
-.Seeds1:before {
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-color: white;
-  left: 180%;
-  top: -50%;
-  border-radius: 40%;
-  transform: rotate(60deg);
-  box-shadow: inset -1px -3px #c9c9c9;
-}
-
-.Seeds2 {
-  width: 10%;
-  height: 15%;
-  position: absolute;
-  background-color: white;
-  left: 64%;
-  top: 50%;
-  border-radius: 40%;
-  transform: rotate(10deg);
-  box-shadow: inset -3px 0 #c9c9c9;
-}
-
-.Seeds2:before {
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-color: white;
-  left: 150%;
-  top: -130%;
-  border-radius: 40%;
-  transform: rotate(90deg);
-  box-shadow: inset 1px 3px #c9c9c9;
+  background-image: radial-gradient(#F3D9B1 5%, transparent 6%), radial-gradient(#F3D9B1 5%, transparent 6%);
+  background-size: 40px 30px;
+  background-position: 10px 0px, 30px 15px;
 }
 
 .Meat {
-  width: 80%;
-  height: 8%;
-  background: linear-gradient(#7f3608, #702e05);
-  margin: 2% auto;
-  border-radius: 15px;
+  width: 100%;
+  height: 25px;
+  top: 200px;
+  left: 155px;
+  background-color: #492F16;
+  border-radius: 50px;
+  margin: 2px 0;
 }
 
 .Cheese {
-  width: 90%;
-  height: 4.5%;
-  margin: 2% auto;
-  background: linear-gradient(#f4d004, #d6bb22);
-  border-radius: 20px;
+  width: 110%;
+  height: 15px;
+  background-color: #FFC200;
+  border-radius: 50px;
+  margin: 2px 0;
+  margin-left: -5%;
+  position: relative;
+}
+
+.melting-cheese {
+  position: absolute;
+  animation: melt 3s infinite;
+  width: 15px;
+  height: 25px;
+  background-color: #FFC200;
+  top: 0;
+  left: 50px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  z-index: 1000;
+}
+
+.melting-cheese::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 150%;
+  background-color: #FFC200;
+  left: 50px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  z-index: 1000;
+}
+
+@keyframes melt {
+  0% {
+    height: 0;
+  }
+
+  100% {
+    height: 75px;
+  }
 }
 
 .Salad {
-  width: 85%;
-  height: 7%;
-  margin: 2% auto;
-  background: linear-gradient(#228c1d, #91ce50);
-  border-radius: 20px;
+  width: 90%;
+  height: 15px;
+  background-color: #88B538;
+  border-radius: 50px;
+  margin: 2px 0;
+  margin-left: 5%;
 }
 
 .Bacon {
-  width: 80%;
-  height: 3%;
-  background: linear-gradient(#bf3813, #c45e38);
-  margin: 2% auto;
+  width: 100%;
+  height: 15px;
+  background-color: rgb(192, 53, 53);
+  border-radius: 50px;
+  margin: 2px 0;
+  position: relative;
+}
+
+.Bacon::before,
+.Bacon::after {
+  content: "";
+  position: absolute;
+  height: 100%;
+  background-color: #FFF;
+  opacity: 0.4;
+}
+
+.Bacon::before {
+  width: 13%;
+  left: 10%;
+}
+
+.Bacon::after {
+  width: 13%;
+  right: 10%;
 }
 
 .Burger {
-  width: 100%;
-  margin: auto;
-  height: 250px;
-  text-align: center;
-  font-weight: bold;
-  font-size: 1.2rem;
+  width: 40%;
 }
 
 .ingredient-img {
-  width: 100px;
-}
-
-@media (min-width: 1000px) and (min-height: 700px) {
-  .Burger {
-    width: 700px;
-    height: 600px;
-  }
-}
-
-@media (min-width: 500px) and (min-height: 401px) {
-  .Burger {
-    width: 450px;
-    height: 300px;
-  }
-}
-
-@media (min-width: 500px) and (max-height: 400px) {
-  .Burger {
-    width: 350px;
-    height: 200px;
-  }
+  width: 65px;
 }
 
 .ingredient img{
